# crewai-demo

./: .env.example  README.md  pyproject.toml
.github/agents/: long-content-translate-agent.agent.md
src/blog_improver/: crew.py  llm.py  main.py
src/blog_improver/config/: agents.yaml  review_agents.yaml  review_tasks.yaml  tasks.yaml  topic_agents.yaml  topic_tasks.yaml  translation_agents.yaml  translation_tasks.yaml
src/blog_improver/results/: suggestions.md
src/blog_improver/results/deepseek-v4-pro/: review.md  suggestions.md
src/blog_improver/results/gemini-3.1-pro-preview/: review.md
src/blog_improver/results/translations/deepseek-v4-pro/github-com-tc39-proposal-signals-20260526-000625/: fetch_report.md  source.md  source_package.json  source_segments.md  translation.json  translation.md  translation_summary.md  verification.json  verification.md
src/blog_improver/tools/: __init__.py  url_translation_tools.py
