[project]
name = "crewai-demo"
version = "0.1.0"
description = "CrewAI demo: AI agents that analyze and improve rowanliu.com blog"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=1.14.5",
    "hatchling>=1.29.0",
]

[project.scripts]
blog-suggest = "blog_improver.main:run_suggest"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_improver"]
